# onnx-calling-rs

./: .gitignore  Cargo.toml  README.md
src/: args.rs  bbox_struct.rs  lib.rs  main.rs  onnx_metadata.rs  sample.rs  yolo.rs
