[package]
name = "onnx-calling"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
image = "0.25.6"
prost = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tract = "0.21.11"
tract-core = "0.21.11"
tract-onnx = "0.21.11"

[[bin]]
name = "sample"
path = "src/sample.rs"
